# 42sh

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  main.c  main.h
src/builtin/: Makefile.am  builtin_true_false.c  builtin_true_false.h  echo.c  echo.h
src/io/: Makefile.am  io.c  io.h
src/lecture/: Makefile.am  lecture.c  lecture.h
src/lexer/: Makefile.am  lexer.c  lexer.h
src/parser/: Makefile.am  parser.c  parser.h
src/variable/: Makefile.am  hash_map.c  hash_map.h  my_itoa.c  my_itoa.h  variable.c  variable.h
tests/: Makefile.am  scriptTest.sh  test_if.sh  testsuite.sh  unittests.c
tests/liste_test/: basic_error_if.sh  basic_if.sh  basic_variable.sh  double_echo.sh  echo_comment.sh  echo_cthulhu.sh  echo_lorem_ispum.sh  echo_n.sh  echo_with_escape.sh  echo_with_escape_hard.sh  echo_without_escape_hard.sh  echo_wthout_escape.sh  mutiple_echo.sh  no_shell.sh  only_comment.sh  pipeline.sh  tete_sur_clavier.sh  uknown_command.sh
